[project]
name = "elma-recplot"
version = "0.1.0"
description = "Elastomania rec plotter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "ruff>=0.12.4",
]
