[project]
name = "elma-recplot"
version = "0.1.0"
description = "Elastomania rec plotter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachecontrol[filecache]>=0.14.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "ruff>=0.12.4",
]
